@@ -20,4 +20,3 @@ match. Allow more than one pattern match?
 cabextract should be localised.
 
 cabextract should not overwrite the source cabinet files when unpacking.
-cabextract should detect minGW's single argument mkdir() function
